@@ -75,6 +75,7 @@
 	* Moved spell checking suggestions from the spell checking form modifier to the spell checker
 	* Changed the no-results command to use the spell checker
 	* Fixed the spell checker to use the current page id for URL/link generation
+	* Added tx_solr_Spellchecker->isIncorrectlySpelled()
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
